@@ -6,6 +6,8 @@ procps-ng-3.3.8
     Debian #707648
   * eliminate the potential library segmentation fault
     Debian #706259, RedHat #951391
+  * top now accomodates a window manager like 'screen'
+    RedHat #962022
 
 
 procps-ng-3.3.7
